Make index prettier with picture

--- a/resources/templates/thymeleaf/index.html
+++ b/resources/templates/thymeleaf/index.html
@@ -12,9 +12,17 @@
     <h1 class="display-5 fw-bold">Hare Matcher</h1>
     <div class="col-lg-6 mx-auto">
         <p class="lead mb-4">Quickly match with a cute rabbit to keep as a pet!</p>
-        <div class="d-grid gap-2 d-sm-flex justify-content-sm-center">
+        <div class="d-grid gap-2 d-sm-flex justify-content-sm-center mb-5">
             <button class="btn btn-primary btn-lg px-4 gap-3" type="button">Sign up now</button>
             <button class="btn btn-outline-secondary btn-lg px-4" type="button">Read more</button>
+        </div>
+    </div>
+    <div style="max-height: 30vh;">
+        <div class="container px-5">
+            <img alt=""
+                 class="img-fluid border rounded-3 shadow-lg" loading="lazy"
+                 src="https://images.unsplash.com/photo-1589952283406-b53a7d1347e8?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1934&q=80"
+                 width="800">
         </div>
     </div>
 </div>
