Add title and remove test user output from index

--- a/resources/templates/thymeleaf/index.html
+++ b/resources/templates/thymeleaf/index.html
@@ -2,11 +2,10 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>HareMatcher</title>
     <link href="/static/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
-<span th:text="${user.name}"></span>
 
 <div class="px-4 py-5 my-5 text-center">
     <h1 class="display-5 fw-bold">Hare Matcher</h1>
