Add user signup

--- a/resources/templates/thymeleaf/index.html
+++ b/resources/templates/thymeleaf/index.html
@@ -13,7 +13,9 @@
     <div class="col-lg-6 mx-auto">
         <p class="lead mb-4">Quickly match with a cute rabbit to keep as a pet!</p>
         <div class="d-grid gap-2 d-sm-flex justify-content-sm-center mb-5">
-            <button class="btn btn-primary btn-lg px-4 gap-3" type="button">Sign up now</button>
+            <a href="/signup">
+                <button class="btn btn-primary btn-lg px-4 gap-3" type="button">Sign up now</button>
+            </a>
             <button class="btn btn-outline-secondary btn-lg px-4" type="button">Read more</button>
         </div>
     </div>
