--- a/resources/templates/thymeleaf/profile.html
+++ b/resources/templates/thymeleaf/profile.html
@@ -8,9 +8,14 @@
 <body>
 
 <div class="px-4 py-5 my-5 text-center">
-    <h1 class="display-5 fw-bold">Profile of <span th:text="${email}"></span></h1>
+    <h1 class="display-5 fw-bold">Profile of <span th:text="${user.name}"></span></h1>
 </div>
+
+<a rel="nofollow" th:href="@{'users/' + ${user.id}}">Delete</a>
 
 </body>
 <script src="/static/bootstrap.bundle.min.js"></script>
+<script th:inline="javascript">
+
+</script>
 </html>
