--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -5,9 +5,15 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: #cdffcc !important;
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+.card-header {
+  background-color: #1b1b1b !important;
+  color: white;
 }
