--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -5,7 +5,7 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-color: #cdffcc !important;
+  background-color: rgba(205, 255, 204, 0.25)  !important;
 }
 
 code {
